[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/terminal-grotesque/terminal-grotesque.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/music/arrow.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/1bitpack_kenney_1.1/Tilesheet/colored_transparent_packed.png" type="Texture" id=3]
[ext_resource path="res://screens/Intro.gd" type="Script" id=4]
[ext_resource path="res://potions.res" type="TileSet" id=5]
[ext_resource path="res://text-border.res" type="TileSet" id=6]
[ext_resource path="res://assets/music/toilet.wav" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[node name="Intro" type="Node2D"]
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
margin_left = -0.621216
margin_top = 0.621216
margin_right = 1025.38
margin_bottom = 600.621
color = Color( 0.4, 0.415686, 0.458824, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fronk" type="Sprite" parent="CanvasLayer"]
position = Vector2( 461.658, 32.5363 )
scale = Vector2( 6, 6 )
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 496, 160, 16, 16 )

[node name="TileMap" type="TileMap" parent="CanvasLayer"]
scale = Vector2( 2, 2 )
tile_set = ExtResource( 6 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 327687, 2, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327696, 0, 0, 327697, 0, 0, 327698, 0, 0, 327699, 0, 0, 327700, 0, 0, 327701, 0, 0, 327702, 0, 0, 327703, 0, 0, 327704, 7, 0, 393223, 3, 0, 393240, 6, 0, 458759, 3, 0, 458776, 6, 0, 524295, 3, 0, 524312, 6, 0, 589831, 3, 0, 589848, 6, 0, 655367, 3, 0, 655384, 6, 0, 720903, 3, 0, 720920, 6, 0, 786439, 3, 0, 786456, 6, 0, 851975, 3, 0, 851992, 6, 0, 917511, 3, 0, 917528, 6, 0, 983047, 4, 0, 983048, 1, 0, 983049, 1, 0, 983050, 1, 0, 983051, 1, 0, 983052, 1, 0, 983053, 1, 0, 983054, 1, 0, 983055, 1, 0, 983056, 1, 0, 983057, 1, 0, 983058, 1, 0, 983059, 1, 0, 983060, 1, 0, 983061, 1, 0, 983062, 1, 0, 983063, 1, 0, 983064, 5, 0 )

[node name="DrFronksReport" type="Label" parent="CanvasLayer"]
margin_left = 256.0
margin_top = 192.0
margin_right = 776.0
margin_bottom = 488.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.811765, 0.776471, 0.721569, 1 )
text = "I’m Dr. Fronk. You are going to be put through a series of tests. If you succeed there will be a great reward. But it is unlikely. Move quickly and don’t die. Let’s begin. "
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="CanvasLayer"]
margin_left = 408.0
margin_top = 192.0
margin_right = 616.0
margin_bottom = 240.0
custom_fonts/font = SubResource( 3 )
text = "Test Text"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu_button" type="Button" parent="CanvasLayer"]
margin_left = 439.182
margin_top = 524.209
margin_right = 592.182
margin_bottom = 591.209
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.811765, 0.776471, 0.721569, 1 )
custom_colors/font_color_hover = Color( 0.235294, 0.67451, 0.843137, 1 )
text = "START"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap2" type="TileMap" parent="CanvasLayer"]
scale = Vector2( 2, 2 )
tile_set = ExtResource( 5 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 1, 0, 0, 6, 1, 0, 11, 0, 0, 20, 2, 0, 28, 1, 0, 30, 0, 0, 65544, 2, 0, 65560, 0, 0, 131075, 1, 0, 131101, 2, 0, 196627, 0, 0, 196631, 1, 0, 262153, 0, 0, 327683, 0, 0, 327686, 1, 0, 327711, 0, 0, 393216, 2, 0, 458778, 2, 0, 524317, 1, 0, 655362, 1, 0, 655365, 0, 0, 655386, 0, 0, 720927, 2, 0, 786437, 2, 0, 851968, 0, 0, 917529, 1, 0, 983068, 2, 0, 1048577, 1, 0, 1048584, 2, 0, 1114112, 2, 0, 1114122, 0, 0, 1114143, 0, 0, 1179651, 0, 0, 1179661, 1, 0, 1179668, 2, 0, 1179672, 0, 0, 1179677, 1, 0 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="PressSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "Background"
[connection signal="mouse_entered" from="CanvasLayer/menu_button" to="." method="_on_menu_button_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/menu_button" to="." method="_on_menu_button_pressed"]
[connection signal="finished" from="PressSound" to="." method="_on_PressSound_finished"]
